deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  graphql
  labels:
    app:  graphql
  namespace: graphql-dev-ns
spec:
  selector:
    matchLabels:
      app: graphql
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  graphql
    spec:
      containers:
      - image: 168933414344.dkr.ecr.ap-south-1.amazonaws.com/offsetmax-graphql-db-dev:latest   ##changes
        imagePullPolicy: Always
        name:  graphql
        resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m    
        ports:
        - containerPort:  4000
          name: graphql-port
      restartPolicy: Always
